=== 0.1.X (to be released as 0.2) ===

- BUGFIX: saving the whole process name for `get_cpu_usage`
- added `cpu.get_cpu_usage`
- When passing no user to `get_memory_usage` we now return total memory used
  by all users.


=== 0.1 ===
- Initial commit


# Suggested file syntax:
#
# === (ongoing) ===
# - this is always on top of the file
# - when you release a new version, you rename the last `(ongoing)` to the new
#   version and add a new `=== (ongoing) ===` to the top of the file
#
# === 1.0 ===
# - a major version is created when the software reached a milestone and is 
#   feature complete
#
# === 0.2 ===
# - a minor version is created when new features or significant changes have
#   been made to the software.
#
# === 0.1.1 ==
# - for bugfix releases, fixing typos in the docs, restructuring things, simply
#   anything that doesn't really change the behaviour of the software you
#   might use the third digit which is also sometimes called the build number.