@@ -27,11 +27,13 @@ Simply import the package and use it anywhere in your python code::
     from server_metrics.hard_disk import get_disk_usage
     from server_metrics.postgresql import get_database_size
     from server_metrics.cpu import get_cpu_usage
+    from server_metrics.memcached import get_memcached_usage
 
     print get_memory()
     print get_disk_usage('$HOME')
     print get_database_size('my_role', 'my_db')
     print get_cpu_usage('user')
+    print get_memcached_usage('~/memcached.sock')
 
 
 Contribute
